# RamenEngine

./: CMakeLists.txt
cmake/: CompileFlags.cmake  EngineTarget.cmake  Sanitizer.cmake
engine/core/: CMakeLists.txt
engine/core/include/: Engine.h
engine/core/include/log/: log.h
engine/core/include/platform/: platform.h
engine/core/src/: Engine.cpp
engine/core/src/log/: Logger.cpp
engine/core/src/platform/: Platform.cpp
src/: main.cpp
